# cwl-zen

./: Cargo.toml  README.md  cwl-zen-runner.sh
.github/workflows/: ci.yml  release.yml
docs/: refactoring-guide.md  spec.md
docs/superpowers/plans/: 2026-04-02-cwl-zen-runner.md  2026-04-02-phase2-container-engines.md
docs/superpowers/specs/: 2026-04-02-phase2-container-engines-design.md  2026-04-02-provenance-ro-crate-design.md  2026-04-03-conformance-analysis.md
src/: command.rs  container.rs  dag.rs  execute.rs  input.rs  lib.rs  main.rs  model.rs  param.rs  parse.rs  provenance.rs  stage.rs  staging.rs
tests/: integration_echo.rs  integration_workflow.rs
tests/fixtures/: add-prefix.cwl  cat-input.yml  cat.cwl  echo-input.yml  two-step-input.yml  two-step.cwl
tools/: cwl-zen-lint
